k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-world
spec:
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello
          image: gianrubio/hello-world:0.1
          imagePullPolicy: IfNotPresent
