k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
