k8s/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world
  labels:
    app: hello-world
    stable.k8s.psg.io/kcm.class: default
spec:
  rules:
  - host: hello-world.kops.k8s.live
    http:
      paths:
      - backend:
          serviceName: hello-world
          servicePort: 8000
        path: /
  tls:
  - hosts:
    - hello-world.kops.k8s.live
    secretName: hello-world.kops.k8s.live
